dataset update and added second function to convert txt file to csv

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Demonstrate conversion of the horse-colic.txt file to horse-colic.csv - pandas\n",
+    "#Demonstrate conversion of the horse-colic.txt file to horse-colic.csv - pandas -- first method\n",
     "horse_colic_raw = pd.read_csv('dataset/horse-colic.txt',header=None,dtype='str')\n",
     "horse_colic_raw.to_csv('dataset/horse-colic.csv',index=False,header=False)"
    ]
@@ -28,6 +28,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b6b6fd02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Demonstrate conversion of the horse-colic.txt file to horse-colic.csv - pandas -- second method\n",
+    "import csv\n",
+    "\n",
+    "with open('dataset/horse-colic.txt','r')as in_file:\n",
+    "    stripped = (line.strip() for line in in_file)\n",
+    "    lines = (line.split(\",\") for line in stripped if line)\n",
+    "    with open('dataset/horse-colic2.csv','w')as out_file:\n",
+    "        writer = csv.writer(out_file)\n",
+    "        writer.writerows(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "00fd879b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2868992d",
    "metadata": {},
    "outputs": [
@@ -60,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c9ce4706",
    "metadata": {},
    "outputs": [],
@@ -71,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b3c65f84",
    "metadata": {},
    "outputs": [
@@ -295,7 +313,7 @@
        "4  2  1   530255  37.30  104  35  NaN  NaN    6  2  NaN  NaN  NaN  NaN  NaN   NaN  NaN  NaN  74.00  7.40  NaN   NaN  2  2  04300  00000  00000  2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "784c6ee5",
    "metadata": {},
    "outputs": [],
@@ -317,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4a855155",
    "metadata": {},
    "outputs": [],
@@ -359,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a25596c5",
    "metadata": {},
    "outputs": [
@@ -583,7 +601,7 @@
        "4       2   1   530255     37.30   104  35       NaN        NaN      6   2        NaN     NaN      NaN  NaN     NaN     NaN       NaN     NaN  74.00     7.40       NaN        NaN       2       2    04300    00000    00000       2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "93e58d5d",
    "metadata": {},
    "outputs": [],
@@ -605,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "417ff76b",
    "metadata": {},
    "outputs": [
@@ -654,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "36315028",
    "metadata": {},
    "outputs": [
@@ -679,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "da8481f8",
    "metadata": {},
    "outputs": [
@@ -717,7 +735,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "6e7feedb",
    "metadata": {},
    "outputs": [
@@ -740,7 +758,8 @@
       "\n",
       "Answer : No - Dropping rows with NaN will definitely make this dataset unusable as \n",
       "98.0% of the rows in this dataset will be removed.\n",
-      "\n"
+      "\n",
+      "There are several ways of handling missing values in python such as fillna(),replace() and interpolate() functions\n"
      ]
     }
    ],
@@ -752,12 +771,14 @@
     "print(f'''\n",
     "Answer : No - Dropping rows with NaN will definitely make this dataset unusable as \n",
     "{NaN_rows_percentage}% of the rows in this dataset will be removed.\n",
-    "''')"
+    "''')\n",
+    "\n",
+    "print('There are several ways of handling missing values in python such as fillna(),replace() and interpolate() functions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "2eb9d2b8",
    "metadata": {},
    "outputs": [
@@ -766,6 +787,7 @@
      "output_type": "stream",
      "text": [
       "Method: Mean Imputation of Missing Values (Univariate)\n",
+      "Justification : The Scikit Learn - Imputer Module is able to reduce null values to 0 by replacing the null values with a predicted values based on columns and rows pattern of the dataset\n",
       "Missing: 1605\n",
       "Missing: 0\n"
      ]
@@ -774,6 +796,7 @@
    "source": [
     "#Read and evaluate the following code in Figure 1. What method is the code using to reduce the missing value from 1605 to 0? Justify your answer.\n",
     "print ('Method: Mean Imputation of Missing Values (Univariate)')\n",
+    "print ('Justification : The Scikit Learn - Imputer Module is able to reduce null values to 0 by replacing the null values with a predicted values based on columns and rows pattern of the dataset')\n",
     "\n",
     "from numpy import isnan\n",
     "from pandas import read_csv\n",
@@ -791,22 +814,22 @@
     "X = data[:,ix]\n",
     "y = data[:,23]\n",
     "\n",
-    "#count number of missing values in pre-imputation dataset\n",
+    "#count and display number of missing values in pre-imputated dataset\n",
     "print('Missing: %d' % sum(isnan(X).flatten()))\n",
     "\n",
-    "#using mean imputation from scikit-lean SimpleImputer\n",
+    "#using mean imputation from scikit-lean SimpleImputer - calculate mean within columns and rows of missing values and point the intersection of those values\n",
     "imputer = SimpleImputer(strategy='mean')\n",
     "#predict missing values based on mean of its column - imputer\n",
     "imputer.fit(X)\n",
     "Xtrans = imputer.transform(X)\n",
     "\n",
-    "#count number of missing values in imputated dataset\n",
+    "#count and display number of missing values in imputated dataset\n",
     "print('Missing: %d' % sum(isnan(Xtrans).flatten()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "643978a1",
    "metadata": {},
    "outputs": [],
@@ -816,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9b4b82cb",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1246,7 @@
        "[300 rows x 27 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "bdaf0f36",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1676,7 @@
        "[300 rows x 28 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
